# admapper

./: .gitignore  AGENTS.md  Claude.md  Makefile  README.md  attack_graph.html  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
admapper/: __init__.py  __main__.py
admapper/acl/: __init__.py  analyze.py  enum.py  parse.py  render.py  rights.py
admapper/adcs/: __init__.py  acl_detect.py  analyze.py  catalog.py  certipy.py  constants.py  detect.py  eku.py  enrich.py  enroll.py  enum.py  render.py  runner.py  template_sd.py
admapper/analysis/: __init__.py  attack_readiness.py  attack_vector_catalog.py  engagement_intel.py  identity_capabilities.py  password_rules.py  user_match.py
admapper/auth/: __init__.py  auth_enum.py  bloodhound_collect.py  bloodhound_export.py  kerberos_ldap_client.py  kerberos_ldap_repl.py  ldap_context.py  ldap_enum.py  ldap_session.py  posture.py  smb_enum.py  start_auth.py
admapper/chain/: __init__.py  analyze.py  reanalyze.py  render.py
admapper/cli/: __init__.py  banner.py  brief.py  commands.py  main.py  run.py  scan.py  shell.py
admapper/coerce/: __init__.py  analyze.py  catalog.py  exploit.py  render.py
admapper/core/: __init__.py  auth_inventory.py  compatibility.py  config.py  connectivity.py  credentials.py  dashboard_mode.py  discovery.py  findings.py  game_mode.py  graph.py  hashes.py  hosts.py  install_check.py  json_io.py  kerberos_hashes.py  network.py  operator_setup.py  opsec.py  output.py  owned.py  paths.py  platform.py  provenance.py  reachability.py  session.py  spray_history.py  system_hosts.py  tools_report.py  users.py  verbosity.py  workspace.py
admapper/creds/: __init__.py  asreproast.py  auth_checks.py  common.py  crack.py  kerberoast.py  kerberos_skew.py  password_candidates.py  password_variants.py  policy.py  spray.py  spray_engine.py  time_sync.py  variations.py  verify.py
admapper/cves/: __init__.py  analyze.py  catalog.py  detect.py  discover.py  enum_domain.py  exploit.py  os_parse.py  probe.py  render.py
admapper/dashboard/: bloodhound_overlay.py  cheatsheet_ui.py  cli_launch.py  command_cheatsheet.py  dashboard_auth.py  dashboard_html.py  dashboard_server.py  dashboard_winrm.py  exec_bridge.py  next_action.py  ops_html.py  ops_payload.py  ops_progress.py  ops_state.py  ops_ui.py  output_parser.py  path_playbook.py  sharphound_import.py  shell_bridge.py  show.py  target_ip.py  terminal_filter.py  terminal_stream.py  topology.py  web.py  workspace_ui.py  workspace_vars_bridge.py
admapper/engage/: __init__.py  auto.py
admapper/engagement/: __init__.py
admapper/enum/: __init__.py  ldap_enum.py  ldap_users.py  roastable.py  scan.py
admapper/enum_pkg/: __init__.py  ldap_users.py  rid_cycle.py  samr.py  scan.py
admapper/enumeration/: __init__.py  ldap_users.py  roastable.py  samr.py  scan.py
admapper/escalate/: __init__.py  analyze.py  edges.py  pivot.py  render.py
admapper/exploit/: __init__.py  acl_exploit.py  base.py  cred_parse.py  dcsync.py  delegation.py  engine.py  gmsa.py  gpo_abuse.py  laps.py  lateral.py  lateral_exec.py  persistence.py  prepare.py  rbcd.py  relay.py  (+4 more)
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DEPENDENCIES.md  PLATFORMS.md  PROJECT.md
scripts/: fix-macos-winrm.sh  import_cheatsheet_catalog.py  import_edge_abuse.py  install.ps1  install.py  install.sh  kali-setup.sh  patch-netexec-winrm.sh
tests/: conftest.py  test_acl_abuse.py  test_acl_sid_parsing.py  test_adcs.py  test_adcs_acl.py  test_adcs_enroll.py  test_asreproast.py  test_attack_readiness.py  test_attack_vector_mssql.py  test_auth_enum.py  test_auto_engagement.py  test_chain.py  test_coerce.py  test_commands.py  test_compatibility.py  test_connectivity.py  test_credentials.py  test_cves.py  test_dashboard_auth.py  test_dashboard_mode.py  test_discovery.py  test_dns.py  test_engagement_intel.py  test_engagement_map.py  test_escalate.py  test_evil_winrm_cmd.py  test_evil_winrm_output.py  test_exploit_prepare.py  test_findings.py  test_game_mode.py  test_game_state.py  test_game_ui.py  test_gmsa_kinit.py  test_graph.py  test_graph_paths.py  test_graph_show.py  test_graph_web.py  test_guides.py  test_guides_context.py  test_html.py  (+55 more)
(+206 files in other folders)
