[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "admapper"
version = "0.2.0"
description = "ADMapper — all-in-one Active Directory pentesting toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "0x15k" }]
keywords = [
    "active-directory", "pentesting", "red-team", "kerberoasting",
    "dcsync", "bloodhound", "adcs", "lateral-movement", "oscp",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "typer>=0.15,<1.0",
    "rich>=13.0,<14.0",
    "prompt-toolkit>=3.0,<4.0",
    "dnspython>=2.7,<3.0",
    "ldap3>=2.9,<3.0",
    "networkx>=3.0",
    "impacket>=0.12,<0.14",
]

[project.optional-dependencies]
# Full engagement tier (WinRM + Kerberos).
# certipy-ad and pywhisker are standalone CLIs — install them
# separately:  pipx install certipy-ad  /  pipx install pywhisker
full = [
    "pypsrp>=0.8,<0.9",
    "gssapi>=1.8",
    "krb5>=0.5",
]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.9,<1.0",
    "bandit>=1.8,<2.0",
]

[project.urls]
Homepage = "https://github.com/0x15k/admapper"
Issues = "https://github.com/0x15k/admapper/issues"

[project.scripts]
admapper = "admapper.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["admapper"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"admapper/guides/catalog.py" = ["E501"]
"admapper/recon/dns.py" = ["I001"]
"admapper/enumeration/ldap_users.py" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
